# surql

./: .gitignore  README.md  init.lua
mynulang/: Cargo.toml  binding.gyp  grammar.js  package.json
mynulang/bindings/node/: binding.cc  index.js
mynulang/bindings/rust/: lib.rs
mynulang/queries/: highlights.scm
mynulang/src/: grammar.json  node-types.json  parser.c
new-lsp/: build.sh  go.mod  go.sum  main.go  test.mylang
new-lsp/bindings/: bindings.go  parser.c
new-lsp/features/: completion.go  references.go
new-lsp/features/diagnostics/: diagnostics.go  statement_errors.go  unknown_statement.go
new-ts/: grammar.js  package.json  test.mylang  test.surql
new-ts/src/: grammar.json  node-types.json  parser.c
rust-lsp/: Cargo.toml  build.rs
rust-lsp/src/: main.rs
rust-sitter-test/: Cargo.toml
rust-sitter-test/src/: main.rs
surrealql-lsp/: build.sh  example.suql  go.mod  go.sum  main.go
surrealql-lsp-2/: example.suql  go.mod  go.sum  main.go
surrealql-lsp-2/bindings/: parser.c
surrealql-lsp/bindings/: bindings.go
test_root/: setup.sh  test.mynulang  test.surql
tree-sitter-surql/: grammar.js
tree-sitter-surql/src/: grammar.json  node-types.json
tree-sitter-surrealql/: grammar.js  package.json  test.suql
tree-sitter-surrealql/queries/: highlight.scm
tree-sitter-surrealql/src/: grammar.json  node-types.json  parser.c  scanner.cc
