[package]
name = "rust-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.20.0"
tree-sitter = "0.20"
tokio = { version = "1.33.0", features = ["full"] }
tree-sitter-surrealql = { path = "../tree-sitter-surrealql" }

[build-dependencies]
cc = "1.0.83"
